--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@types/react-native": "^0.70.19",
     "expo": "~51.0.9",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
@@ -20,7 +21,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.3.2"
+    "@tsconfig/react-native": "^3.0.5",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.3.3",
+    "@types/react-test-renderer": "^18.3.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.4.5"
   },
   "private": true
 }
