feat: add swiping feature to refresh, add scroll view for horizontal device orientation, update app icon/adaptive icon/splash screen

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -4,20 +4,20 @@
     "slug": "PocketMail",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/iconv1.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splashv1.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#8C52FF"
     },
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/adaptive-iconv1.png",
+        "backgroundColor": "#8C52FF"
       }
     },
     "web": {
