--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@dudigital/react-native-zoomable-view": "^1.1.4",
     "@expo/metro-runtime": "~3.2.1",
     "expo": "~51.0.9",
     "expo-status-bar": "~1.12.1",
@@ -22,11 +23,11 @@
     "@babel/core": "^7.20.0",
     "@tsconfig/react-native": "^3.0.5",
     "@types/jest": "^29.5.12",
-    "@types/react": "^18.3.3",
+    "@types/react": "~18.2.79",
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.4.5"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
